--- a/play.html
+++ b/play.html
@@ -3,7 +3,7 @@
 <head>
     
     
-    <title>Assignment4</title>
+    <title>Webapps - Assignment4</title>
 </head>
 <body>
    <h1>Komala_Presents</h1> 
