--- a/play.html
+++ b/play.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     
-    
+    <link rel="stylesheet" href="shakespeare.css">
+
     <title>Webapps - Assignment4</title>
 </head>
 <body>
    <h1>Komala_Presents</h1> 
    <h2>All's Well That Ends Well</h2>
    <h3>SCENE I. Rousillon. The COUNT's palace.</h3>
-   <p class="STAGE DIRECTION">Enter BERTRAM, the COUNTESS of Rousillon, HELENA, and LAFEU, all in black</p>
+   <p class="stage-direction">Enter BERTRAM, the COUNTESS of Rousillon, HELENA, and LAFEU, all in black</p>
     <h4 CLASS="COUNTESS">COUNTESS</h4>
    <p class="SPEECH"> In delivering my son from me, I bury a second husband.</p>
     <h4 class="BERTRAM">BERTRAM</h4>
