--- a/play.html
+++ b/play.html
@@ -48,5 +48,32 @@
     lately spoke of him admiringly and mourningly: he
     was skilful enough to have lived still, if knowledge
     could be set up against mortality.</p>
+    <table>
+        <thead>
+          <tr>
+            <th>CHARACTER</th>
+            <th>ACTOR</th>
+            <th>OFFER</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>BERTRAM</td>
+            <td>MAHESH</td>
+            <td>$2,500,000</td>
+          </tr>
+          <tr>
+            <td>COUNTESS</td>
+            <td>ANUSHKA</td>
+            <td>$1,500,000</td>
+          </tr>
+          <tr>
+            <td>LAFEU</td>
+            <td>DHANUSH</td>
+            <td>$1,000,000</td>
+          </tr>
+        </tbody>
+      </table>
+      
 </body>
 </html>
