--- a/play2.html
+++ b/play2.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <h4 class="BERTRAM">BERTRAM</h4>
-   <p class="SPEECH"> What is it, my good lord, the king languishes of?</p>
+   <p class="speech"> What is it, my good lord, the king languishes of?</p>
     <h4 class="LAFEU">LAFEU</h4>
-   <p class="SPEECH"> A fistula, my lord.</p>
+   <p class="speech"> A fistula, my lord.</p>
    <h4 class="BERTRAM"> BERTRAM</h4>
-   <p class="SPEECH"> I heard not of it before.</p>
+   <p class="speech"> I heard not of it before.</p>
     <a href="play.html">Back to beginning</a>
 
 </body>
